# taehoonsong.github.io

./: .gitignore  CNAME  LICENSE  README.md  build.sh  generate_site.py  generate_website.py  index.html  publish.sh  pyproject.toml  robots.txt  serve.sh  watch.sh  watcher.py
content/: 2021-05-15-foss.md  2021-05-17-central-limit-theorem.md  2021-05-23-confidence-intervals.md  2021-05-30-assuming-independence.md  2021-06-13-digital-privacy.md  2021-06-20-bayesian-inference.md  2021-06-27-stratification.md  2021-07-01-inla.md  2025-11-19-python-dataclasses.md  2025-12-24-python-httpx.md  2025-12-29-sql-dataload-bcp.md  2026-02-11-logging-to-sql-server.md  2026-02-12-pathlib-vs-os.md  2026-04-14-mssql-python.md  2026-04-26-python-context-managers.md  basics-of-bayesian-inference.md  blog-post-1.md  confidence-intervals.md  confidence_intervals.md  draft-2025-12-23-python-httpx.md  draft-2025-12-29-sql-dataload-bcp.md  resume.json  test_post-2.md  test_post.md
filters/: fix_markdown_links.lua
pages/: CNAME  index.html  pets.html  resume.html  resume.tex
pages/css/: main.css  posts.css  resume.css  sidenav.css
pages/posts/: 2021-05-15-foss.html  2021-05-17-central-limit-theorem.html  2021-05-23-confidence-intervals.html  2021-05-30-assuming-independence.html  2021-06-13-digital-privacy.html  2021-06-20-bayesian-inference.html  2021-06-27-stratification.html  2021-07-01-inla.html  2025-11-19-python-dataclasses.html  (+12 more)
src/: blog.md
templates/: center_figures.lua  fix_markdown_links.lua  index.html  pets.html  post.html  post_index.html  resume.html  resume.tex
(+4 files in other folders)
