[project]
name = "resume-website-generator"
version = "0.1.0"
description = "Generate a static website that hosts my resume and blog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.9",
    "markupsafe>=3.0.3",
    "pypandoc>=1.16",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
]
